@@ -39,24 +39,15 @@ anova.coxph <- function (object, ...,  test = 'Chisq') {
     # The argument is a single Cox model 
     # Show the nested list of models generated by this model.
     # Missings are the real nuisance here, we want all the models to be
-    #  evaluated on the same subset of observations.
-    # Create a data set that contains all the needed variables, and then collapse
-    #  it down using na.omit.  We could use model.frame instead, but has many
-    #  wrong variable names, e.g. a variable names "offset(zed") if the variable
-    #  zed were an offset.  
+    #  evaluated on the same subset of observations.  Use the result of
+    #  model.frame, called on the largest model, for all fits.
     if (length(object$rscore)>0)
         stop("Can't do anova tables with robust variances")
-
-    varlist <- unique(c(all.vars(object$formula), all.vars(object$call$subset),
-                        all.vars(object$call$weights)))
-    lcall <- parse(text=paste("data.frame(", paste(varlist, collapse=", "), ")"))
-    if (is.null(object$call$data))
-        newdata <- eval(lcall, environment(object$formula))
-    else newdata<- eval(lcall, eval(object$call$data), 
-                        environment(object$formula))
-    newdata <- na.omit(newdata)
-
-    # get the list of terms to drop, one by one
+    newdata <- model.frame(object)
+ 
+    # Get the list of things to drop, one by one
+    #  An offset variable will not appear, which is ok since we don't want
+    #  to drop them.
     termlist<-attr(object$terms,"term.labels") #variables in the formula
     specials <- attr(object$terms, "specials")
     if (!is.null(specials$strata)) {
@@ -68,15 +59,55 @@ anova.coxph <- function (object, ...,  test = 'Chisq') {
     nmodel <- length(termlist)
     df <- integer(nmodel+1)  #this will hold the df vector
     loglik <- double(nmodel+1) #and the loglike vector
-    df[nmodel+1] <- sum(!is.na(object$coefficients))
+    df[nmodel+1] <- if (is.null(object$df)) sum(!is.na(object$coefficients))
+                    else sum(object$df)
     loglik[nmodel+1] <- object$loglik[2]
     df[1] <- 0
     loglik[1] <- object$loglik[1]
 
+    # Now for some slight of hand.  The update function fails if any of
+    #  the variables are complex, like "Surv(time, stat)" or "log(age)".
+    # The reason is that the model.frame "newdata" has these as the
+    #  variable names, update uses formulas, formulas don't like quotes
+    #  in them, and we need quotes to parse odd names like this.  The
+    #  cannonical way to do this is to get the model matrix, extract the
+    #  "assign" attribute from it, and then call the internal fit routine,
+    #   e.g., anova.glm calls glm.fit.  Coxph does not save the information
+    #   on which was internal was run, however (coxph.fit, coxpenal.fit, etc.)
+    #   and besides that wouldn't work for penalized terms.
+    #  So, rename all the variables to "zed1", "zed2", etc, then change
+    #   the formula and the termlist.  Response is always first in
+    #   the data frame.
+    nvar <- ncol(newdata)  #number of terms
+    fname <- names(newdata)
+    zname <- paste("zed", 1:nvar, sep="")
+    termlist2 <- zname[match(termlist, fname)]
     fit <- object
+
+    #build a new formula. Someone can have multiple offset(), strata(), or tt()
+    #  terms, hence the call to collapse.
+    temp <- paste("zed1 ~", paste(termlist2, collapse= " + "))
+    offset <- attr(object$terms, "offset")
+    if (length(offset)) temp <- paste(c(temp, 
+                                       paste("offset(", zname[offset], ")")),
+                                   collapse=" +")
+    specials <- attr(terms(fit), "specials")
+    if (!is.null(specials$tt))
+        temp <- paste(c(temp, paste("tt(", zname[specials$tt], ")")),
+                      collapse = " + ")
+    if (!is.null(specials$strata))
+        temp <- paste(c(temp, paste("strata(", zname[specials$strata], ")")),
+                      collapse = " + ")
+
+    fit$formula <- formula(temp)
+    fit$call$formula <- fit$formula
+    fit$call$data <- as.name("newdata")
+    names(newdata) <- zname
+
     if (nmodel > 1) for (i in nmodel:2) {
-        fit <- update(fit, paste(".~. -", termlist[i]), data=newdata)
-        df[i] <- sum(!is.na(coef(fit)))
+        fit <- update(fit, formula(paste(".~. -", termlist2[i])), data=newdata)
+        df[i] <- if (is.null(fit$df)) sum(!is.na(coef(fit)))
+                 else sum(fit$df)
         loglik[i] <- fit$loglik[2]
         }
 
@@ -95,7 +126,5 @@ anova.coxph <- function (object, ...,  test = 'Chisq') {
 		   deparse(object$terms[[2]]),
 		   "\nTerms added sequentially (first to last)\n", 
 		   sep = "")
-    if (is.R())
-	    structure(table, heading = title, class = c("anova", "data.frame"))
-    else    structure(table, heading= title, class='anova')
+    structure(table, heading = title, class = c("anova", "data.frame"))
 }
