@@ -111,7 +111,7 @@ check.
 \item{call}{
 an image of the call to the function. 
 }
-\item{observations} the number of observations in the input data set,
+\item{observations}{the number of observations in the input data set,
 after any missings were removed.}
 
 \item{na.action}{
